# BPS

./: CREDITS.md  LICENSE.md  README.md
bps-common/: MANIFEST.in  README.md  setup.cfg
bps-common/bps/common/: __init__.py  bps_logger.py  common.py  configuration.py  decorators.py  device_resources_constraints.py  fnf_utils.py  joborder.py  l2_joborder_tags.py  lcm_utils.py  mask_io.py  processor_init.py  roi_utils.py  runner_helper.py  toi_utils.py  translate_job_order.py  utils.py
bps-common/bps/common/io/: __init__.py  common.py  parsing.py  translate_common.py
bps-common/recipe/: meta.yaml
bps-l1_core_processor/: README.md  setup.cfg
bps-l1_core_processor/bps/l1_core_processor/: __init__.py  input_file.py  interface.py  pf_selector_input_file.py  processing_options.py  processing_parameters.py  serialization.py  translate.py
bps-l1_core_processor/recipe/: meta.yaml
bps-l1_processor/: MANIFEST.in  pyproject.toml  setup.cfg  setup.py
bps-l1_processor/bps/l1_processor/: __init__.py  __main__.py  check_l1_device_resources.py  cli.py  folder_layout.py  intermediate_footprint.py  main_app.py  restart.py  run_l1_processor.py  scene_center.py
bps-l1_processor/bps/l1_processor/autofocus/: af_lib.py  interface.py  main_autofocus_bps.py  save_aresys.py  signalproclib.py
bps-l1_processor/bps/l1_processor/aux_tec/: __init__.py  ionex_files_merger.py  ionex_files_reader.py  utils.py
bps-l1_processor/bps/l1_processor/core/: __init__.py  channel_imbalance.py  chirp_replica_utils.py  doppler_centroid_poly.py  input_file_utils.py  interface.py  parsing.py  processing_options_utils.py  processing_parameters_utils.py  run.py  run_autofocus.py  run_core_rx_only.py  time_interval.py  time_validity.py  utils.py  wgs84_fallback_utils.py
bps-l1_processor/bps/l1_processor/io/: l0_mph_utils.py
bps-l1_processor/bps/l1_processor/iri/: __init__.py  ionospheric_app.py
bps-l1_processor/bps/l1_processor/parc/: __init__.py  parc_info.py  parc_info_utils.py  parc_processing_info.py  parc_processing_utils.py  run.py  translate_parc_info.py
bps-l1_processor/bps/l1_processor/post/: __init__.py  interface.py  read_iono_cal_report.py  rfi_masks_statistics.py  run.py
bps-l1_processor/bps/l1_processor/pre/: __init__.py  interface.py  run.py
bps-l1_processor/bps/l1_processor/processor_interface/: __init__.py  aux_pp1.py  aux_pp1_product.py  dem_db.py  joborder_l1.py  rfi_activation_mask.py  translate_aux_pp1.py  translate_job_order.py  xsd_validation.py
bps-l1_processor/bps/l1_processor/settings/: __init__.py  intermediate_names.py  l1_binaries.py  l1_intermediates.py
bps-l1_processor/bps/l1_processor/status_system/: __init__.py  status.py  status_utils.py  translate_status.py
bps-l1_processor/recipe/: meta.yaml
bps-l2b_fd_processor/: MANIFEST.in  setup.cfg  setup.py
bps-l2b_fd_processor/bps/l2b_fd_processor/: __init__.py  __main__.py  commands.py
bps-l2b_fd_processor/bps/l2b_fd_processor/cli/: __init__.py  run.py
bps-l2b_fd_processor/bps/l2b_fd_processor/core/: __init__.py  aux_pp2_2b_fd.py  joborder_l2b_fd.py  parsing.py  translate_aux_pp2_2b_fd.py  translate_job_order.py
bps-l2b_fd_processor/bps/l2b_fd_processor/fd/: __init__.py  fd_commands.py
bps-l2b_fd_processor/bps/l2b_fd_processor/processor_interface/: __init__.py  xsd_validation.py
bps-l2b_fd_processor/recipe/: meta.yaml
bps-l2b_fh_processor/: MANIFEST.in  setup.cfg  setup.py
bps-l2b_fh_processor/bps/l2b_fh_processor/: __init__.py  __main__.py  commands.py  l2b_common_functionalities.py
bps-l2b_fh_processor/bps/l2b_fh_processor/cli/: run.py
bps-l2b_fh_processor/bps/l2b_fh_processor/core/: __init__.py  aux_pp2_2b_fh.py  joborder_l2b_fh.py  parsing.py  translate_aux_pp2_2b_fh.py  translate_job_order.py
bps-l2b_fh_processor/bps/l2b_fh_processor/fh/: __init__.py  fh_commands.py
bps-l2b_fh_processor/bps/l2b_fh_processor/io/: __init__.py
bps-l2b_fh_processor/bps/l2b_fh_processor/processor_interface/: __init__.py  xsd_validation.py
bps-l2b_fh_processor/recipe/: meta.yaml
bps-stack_cal_processor/: MANIFEST.in  README.md  setup.cfg
bps-stack_cal_processor/bps/stack_cal_processor/: __init__.py  configuration.py  input_manager.py
bps-stack_cal_processor/bps/stack_cal_processor/core/: __init__.py  filtering.py  floating_precision.py  interferometric_pairing.py  signal_processing.py  utils.py
bps-stack_cal_processor/recipe/: meta.yaml
bps-stack_processor/: MANIFEST.in  setup.cfg  setup.py
bps-stack_processor/bps/stack_processor/: __init__.py  __main__.py  cli.py  run_stack_processor.py
bps-stack_processor/bps/stack_processor/execution/: __init__.py  stack_cal_execution_manager.py  stack_coreg_execution_manager.py  stack_preproc_execution_manager.py  stack_warping_manager.py  utils.py
bps-stack_processor/bps/stack_processor/io/: __init__.py
bps-stack_processor/bps/stack_processor/utils/: __init__.py  memorycheck.py  numba_utils.py
bps-stack_processor/recipe/: meta.yaml
bps-transcoder/: MANIFEST.in  README.md  setup.cfg  setup.py
bps-transcoder/bps/transcoder/: __init__.py
bps-transcoder/bps/transcoder/auxiliaryfiles/: __init__.py  aux_attitude.py  biomass_auxatt.py  biomass_auxfile.py  biomass_auxfile_reader.py  biomass_auxins.py  biomass_auxorb.py  biomass_auxpp1.py  biomass_auxpp2_2a.py  biomass_auxpp2_agb.py  biomass_auxpp2_fd.py  biomass_auxpp2_fh.py  biomass_auxpps.py
bps-transcoder/bps/transcoder/io/: __init__.py  common_annotation_l1.py  iono_cal_report.py  main_annotation_l1ab.py  preprocessor_report.py  translate_common_annotation_l1.py  translate_main_annotation_l1ab.py
bps-transcoder/bps/transcoder/orbit/: __init__.py  eoorbit.py  orbit.py
bps-transcoder/bps/transcoder/sarproduct/: __init__.py  biomass_l0product.py  biomass_l0product_reader.py  biomass_l1product.py  biomass_l1product_reader.py  biomass_l1product_writer.py  biomass_l2aproduct.py  biomass_l2aproduct_reader.py  biomass_l2aproduct_writer.py  biomass_l2bagbproduct.py  biomass_l2bagbproduct_reader.py  biomass_l2bagbproduct_writer.py  biomass_l2bfdproduct.py  mph.py  (+22 more)
bps-transcoder/recipe/: meta.yaml
(+278 files in other folders)
