[metadata]
name = bps-l1_processor
version = attr: bps.l1_processor.__version__
description = Biomass L1 Processor.
long_description = file: README.md
long_description_content_type = text/markdown
author = Aresys S.R.L.
author_email= info@aresys.it
license = MIT
license_files = LICENSE.txt
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
python_requires = >= 3.12
install_requires = 
    arepytools>=1.7.6
    click
    arepyextras-runner
    scipy
    numpy
    unlzw3
    shapely
    pyproj
    netCDF4
    bps-common==4.3.0
    bps-l1_pre_processor==4.3.0
    bps-l1_core_processor==4.3.0
    bps-transcoder==4.3.0
include_package_data = True

[options.packages.find]
exclude = tests, tests*

[options.entry_points]
console_scripts =
    bps_l1_processor = bps.l1_processor.__main__:main
