[metadata]
name = bps-l2b_fh_processor
version = attr: bps.l2b_fh_processor.__version__
description = Biomass L2b FH Processor.
long_description = file: README.md
long_description_content_type = text/markdown
author = Aresys S.R.L.
author_email= info@aresys.it
license = MIT
license_file = LICENSE.txt
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
python_requires = >= 3.12
install_requires = 
    arepytools
    click
    numba >= 0.57
    numpy
    scipy
    bps-common==4.2.2
    bps-transcoder==4.2.2
include_package_data = True

[options.packages.find]
exclude = tests, tests*

[options.entry_points]
console_scripts =
    bps_l2b_fh_processor = bps.l2b_fh_processor.__main__:main
