[metadata]
name = bps-stack_cal_processor
version = attr: bps.stack_cal_processor.__version__
description = Biomass Stack Calibration Processor package.
long_description = file: README.md
long_description_content_type = text/markdown
author = Aresys S.R.L.
author_email= info@aresys.it
license = MIT
license_files = LICENSE.txt
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
python_requires = >= 3.12
install_requires =
    arepytools>=1.7.6
    bps-common==4.2.2
    numba>=0.57.0
    numpy>=1.26
    opencv-python-headless
    scikit-image
    scikit-learn
    scipy

[options.packages.find]
exclude = test, test*