[metadata]
name = bps-stack_processor
version = attr: bps.stack_processor.__version__
description = Biomass Stack Processor.
long_description = file: README.md
long_description_content_type = text/markdown
author = Aresys S.R.L.
author_email= info@aresys.it
license = MIT
license_files = LICENSE.txt
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
python_requires = >= 3.12
install_requires =
    arepytools>=1.7.6
    arepyextras-runner
    bps-common==4.3.0
    bps-stack_pre_processor==4.3.0
    bps-stack_coreg_processor==4.3.0
    bps-stack_cal_processor==4.3.0
    bps-transcoder==4.3.0
    click
    numpy
    scipy

include_package_data = True

[options.packages.find]
exclude = test, test*

[options.entry_points]
console_scripts =
    bps_stack_processor = bps.stack_processor.__main__:main
