[metadata]
name = bps-transcoder
version = attr: bps.transcoder.__version__
description = Biomass Transcoder package.
long_description = file: README.md
long_description_content_type = text/markdown
author = Aresys S.R.L.
author_email= info@aresys.it
license = MIT
license_files = LICENSE.txt
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
python_requires = >= 3.12
install_requires =
    arepytools>=1.7.6
    gdal>=3.10,<3.11
    netcdf4
    numpy
    opencv-python-headless<4.13
    pystac
    scipy>=1.10
    bps-common==4.3.0
include_package_data = True

[options.packages.find]
exclude = test, test*